fix Flickering in Safari

--- a/assets/styles/04-components/slider.scss
+++ b/assets/styles/04-components/slider.scss
@@ -30,6 +30,12 @@
   .slide--one-sixth{
     @apply w-1/2 sm:w-2/6 md:w-1/4 lg:w-1/6 px-2 lg:px-3.75;
   }
+
+  // Fix Flickering in Safari 
+  .swiper-slide{
+    -webkit-transform: translateZ(0);
+    -webkit-backface-visibility: hidden;
+  }
 }
 
 .home-slider {
